WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119516
REGRESSION(
r151403
): Resizing is extremely laggy on many sites when plugins are disallowed.
https://bugs.webkit.org/show_bug.cgi?id=119516
Summary
REGRESSION(r151403): Resizing is extremely laggy on many sites when plugins a...
Andreas Kling
Reported
2013-08-06 03:29:56 PDT
<
rdar://problem/14648086
>
Attachments
Patch
(1.64 KB, patch)
2013-08-06 03:30 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-08-06 03:30:24 PDT
Created
attachment 208182
[details]
Patch
WebKit Commit Bot
Comment 2
2013-08-06 08:39:41 PDT
Comment on
attachment 208182
[details]
Patch Clearing flags on attachment: 208182 Committed
r153753
: <
http://trac.webkit.org/changeset/153753
>
WebKit Commit Bot
Comment 3
2013-08-06 08:39:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug