REGRESSION(r151403): Resizing is extremely laggy on many sites when plugins are disallowed. <http://webkit.org/b/119516> <rdar://problem/14648086>

Reviewed by Simon Fraser.

The web process relies on the WindowAndViewFramesChanged mechanism for caching a copy
of the window rect for fast access from DOMWindow APIs.

We retain part of the optimization introduced in r151403, namely not computing the
viewFrameInWindowCoordinates and accessibilityPosition unless the web process needs them.

* UIProcess/API/mac/WKView.mm:
(-[WKView _updateWindowAndViewFrames]):


Canonical link: https://commits.webkit.org/137470@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153753 268f45cc-cd09-0410-ab3c-d52691b4dbfc